<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".view.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="24dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="24dp"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/microbs_logo"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/imageLogoDescription"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/hintName"
        android:autofillHints="@string/hintName"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:background="@drawable/background_form_fields"/>

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/hintUsername"
        android:autofillHints="@string/hintUsername"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/background_form_fields"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/hintPassword"
        android:autofillHints="@string/hintPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:background="@drawable/background_form_fields" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signUp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:background="@drawable/background_form_fields"/>

    <TextView
        android:id="@+id/logInSwitch"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/switchToLogin"
        app:layout_constraintEnd_toStartOf="@+id/btnRedirectToLogin"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    <TextView
        android:id="@+id/btnRedirectToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/logInSwitch"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>