<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OptionsActivity"
    android:background="@color/colorLogoSecondary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="24dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="24dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tvTitleOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="80dp"
        android:text="@string/optionsTitle"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnInsertWorker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOptions"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="80dp"
        android:text="@string/insertWorkerAction"
        android:textStyle="bold"
        android:background="@drawable/background_form_fields"/>

    <Button
        android:id="@+id/btnListtWorkers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnInsertWorker"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:text="@string/listWorkerAction"
        android:textStyle="bold"
        android:background="@drawable/background_form_fields"/>

    <Button
        android:id="@+id/btnInsertCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnListtWorkers"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:text="@string/insertCustomerAction"
        android:textStyle="bold"
        android:background="@drawable/background_form_fields"/>

    <Button
        android:id="@+id/btnListCustomers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnInsertCustomer"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:text="@string/listCustomerAction"
        android:textStyle="bold"
        android:background="@drawable/background_form_fields"/>

    <Button
        android:id="@+id/btnStartAService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnListCustomers"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:text="@string/btnStartService"
        android:textStyle="bold"
        android:background="@drawable/background_form_fields"/>

</androidx.constraintlayout.widget.ConstraintLayout>