<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InsertCustomerActivity"
    android:background="@color/colorLightGray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="24dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="24dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tvInsertCustomerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        android:layout_marginTop="80dp"
        android:text="@string/insertCustomerAction"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvInsertCustomerTitle"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:hint="@string/hintName"
        android:autofillHints="@string/hintName"
        android:inputType="text"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etPib"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:hint="@string/hintPib"
        android:autofillHints="@string/hintPib"
        android:inputType="text"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPib"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:hint="@string/hintID"
        android:autofillHints="@string/hintID"
        android:inputType="text"
        android:padding="8dp"/>

    <Spinner
        android:id="@+id/spZaposleni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etId"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="30dp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btnInsertCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/insertCustomerAction"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/spZaposleni"
        android:background="@drawable/background_form_fields"/>

</androidx.constraintlayout.widget.ConstraintLayout>